more chart layout work

--- a/res/html/charts.html
+++ b/res/html/charts.html
@@ -21,7 +21,7 @@
                     <div id="toggleGameChartMarket" class="btn btn-primary">Market</div>
                 </div>
 
-                <div id="gameChartPlayerTabs" class="chartWindow">
+                <div id="gameChartPlayerTabs" class="chartCategoryWindow">
                     <div class="col-xs-12 col-md-12 mt10" style="display: block">
                         <div id="toggleChartBattleXP" class="btn btn-primary">Battle XP</div>
                         <div id="toggleChartHarvestXP" class="btn btn-primary">Harvest XP</div>
@@ -50,7 +50,7 @@
                     <div id="chartStone" class="chartWindow"></div>
                 </div>
 
-                <div id="gameChartStatsTabs" class="chartWindow">
+                <div id="gameChartStatsTabs" class="chartCategoryWindow">
                     <div class="col-xs-12 col-md-12 mt10" style="display: block">
                         <div id="toggleChartMonsterSlain" class="btn btn-primary">Monsters Slain</div>
                         <div id="toggleChartGoldLooted" class="btn btn-primary">Gold Looted</div>
@@ -75,7 +75,7 @@
                     <div id="chartItemsFound" class="chartWindow"></div>
                 </div>
 
-                <div id="gameChartMarketTabs" class="chartWindow">
+                <div id="gameChartMarketTabs" class="chartCategoryWindow">
                     <div class="col-xs-12 col-md-12 mt10" style="display: block">
                         <div id="toggleChartMarketCrystals" class="btn btn-primary">Crystals</div>
                         <div id="toggleChartMarketPlatinum" class="btn btn-primary">Platinum</div>
