chart css update

--- a/res/html/charts.html
+++ b/res/html/charts.html
@@ -1,4 +1,4 @@
-<div id="gameCharts" class="border2 ui-component" style="position: absolute; top: 0; left: 0;">
+<div id="gameCharts" class="border2 ui-component chartWindow">
     <div id="gameChartWindow" class="ui-element border2">
         <h5 id="gameChartTitle" class="center toprounder">Charts</h5>
         <div id="gameChartContent" class="mCSB_container">
@@ -21,7 +21,7 @@
                     <div id="toggleGameChartMarket" class="btn btn-primary">Market</div>
                 </div>
 
-                <div id="gameChartPlayerTabs" class="chartCategoryWindow">
+                <div id="gameChartPlayerTabs" class="chartCategoryTab">
                     <div class="col-xs-12 col-md-12 mt10" style="display: block">
                         <div id="toggleChartBattleXP" class="btn btn-primary">Battle XP</div>
                         <div id="toggleChartHarvestXP" class="btn btn-primary">Harvest XP</div>
@@ -36,21 +36,21 @@
                         <div id="toggleChartIron" class="btn btn-primary">Iron</div>
                         <div id="toggleChartStone" class="btn btn-primary">Stone</div>
                     </div>
-                    <div id="chartBattleXP" class="chartWindow"></div>
-                    <div id="chartHarvestXP" class="chartWindow"></div>
-                    <div id="chartCraftingXP" class="chartWindow"></div>
-                    <div id="chartGold" class="chartWindow"></div>
-                    <div id="chartPlatinum" class="chartWindow"></div>
-                    <div id="chartCrystals" class="chartWindow"></div>
-                    <div id="chartMaterials" class="chartWindow"></div>
-                    <div id="chartFragments" class="chartWindow"></div>
-                    <div id="chartFood" class="chartWindow"></div>
-                    <div id="chartWood" class="chartWindow"></div>
-                    <div id="chartIron" class="chartWindow"></div>
-                    <div id="chartStone" class="chartWindow"></div>
+                    <div id="chartBattleXP" class="chartTab"></div>
+                    <div id="chartHarvestXP" class="chartTab"></div>
+                    <div id="chartCraftingXP" class="chartTab"></div>
+                    <div id="chartGold" class="chartTab"></div>
+                    <div id="chartPlatinum" class="chartTab"></div>
+                    <div id="chartCrystals" class="chartTab"></div>
+                    <div id="chartMaterials" class="chartTab"></div>
+                    <div id="chartFragments" class="chartTab"></div>
+                    <div id="chartFood" class="chartTab"></div>
+                    <div id="chartWood" class="chartTab"></div>
+                    <div id="chartIron" class="chartTab"></div>
+                    <div id="chartStone" class="chartTab"></div>
                 </div>
 
-                <div id="gameChartStatsTabs" class="chartCategoryWindow">
+                <div id="gameChartStatsTabs" class="chartCategoryTab">
                     <div class="col-xs-12 col-md-12 mt10" style="display: block">
                         <div id="toggleChartMonsterSlain" class="btn btn-primary">Monsters Slain</div>
                         <div id="toggleChartGoldLooted" class="btn btn-primary">Gold Looted</div>
@@ -63,19 +63,19 @@
                         <div id="toggleChartResourcesHarvested" class="btn btn-primary">Resources Harvested</div>
                         <div id="toggleChartItemsFound" class="btn btn-primary">Items Found</div>
                     </div>
-                    <div id="chartMonsterSlain" class="chartWindow"></div>
-                    <div id="chartGoldLooted" class="chartWindow"></div>
-                    <div id="chartGoldInGame" class="chartWindow"></div>
-                    <div id="chartResourcesInGame" class="chartWindow"></div>
-                    <div id="chartPlatinumInGame" class="chartWindow"></div>
-                    <div id="chartMaterialInGame" class="chartWindow"></div>
-                    <div id="chartFragmentInGame" class="chartWindow"></div>
-                    <div id="chartHarvests" class="chartWindow"></div>
-                    <div id="chartResourcesHarvested" class="chartWindow"></div>
-                    <div id="chartItemsFound" class="chartWindow"></div>
+                    <div id="chartMonsterSlain" class="chartTab"></div>
+                    <div id="chartGoldLooted" class="chartTab"></div>
+                    <div id="chartGoldInGame" class="chartTab"></div>
+                    <div id="chartResourcesInGame" class="chartTab"></div>
+                    <div id="chartPlatinumInGame" class="chartTab"></div>
+                    <div id="chartMaterialInGame" class="chartTab"></div>
+                    <div id="chartFragmentInGame" class="chartTab"></div>
+                    <div id="chartHarvests" class="chartTab"></div>
+                    <div id="chartResourcesHarvested" class="chartTab"></div>
+                    <div id="chartItemsFound" class="chartTab"></div>
                 </div>
 
-                <div id="gameChartMarketTabs" class="chartCategoryWindow">
+                <div id="gameChartMarketTabs" class="chartCategoryTab">
                     <div class="col-xs-12 col-md-12 mt10" style="display: block">
                         <div id="toggleChartMarketCrystals" class="btn btn-primary">Crystals</div>
                         <div id="toggleChartMarketPlatinum" class="btn btn-primary">Platinum</div>
@@ -86,14 +86,14 @@
                         <div id="toggleChartMarketMaterial" class="btn btn-primary">Material</div>
                         <div id="toggleChartMarketFragment" class="btn btn-primary">Fragments</div>
                     </div>
-                    <div id="chartMarketCrystals" class="chartWindow"></div>
-                    <div id="chartMarketPlatinum" class="chartWindow"></div>
-                    <div id="chartMarketFood" class="chartWindow"></div>
-                    <div id="chartMarketWood" class="chartWindow"></div>
-                    <div id="chartMarketIron" class="chartWindow"></div>
-                    <div id="chartMarketStone" class="chartWindow"></div>
-                    <div id="chartMarketMaterial" class="chartWindow"></div>
-                    <div id="chartMarketFragment" class="chartWindow"></div>
+                    <div id="chartMarketCrystals" class="chartTab"></div>
+                    <div id="chartMarketPlatinum" class="chartTab"></div>
+                    <div id="chartMarketFood" class="chartTab"></div>
+                    <div id="chartMarketWood" class="chartTab"></div>
+                    <div id="chartMarketIron" class="chartTab"></div>
+                    <div id="chartMarketStone" class="chartTab"></div>
+                    <div id="chartMarketMaterial" class="chartTab"></div>
+                    <div id="chartMarketFragment" class="chartTab"></div>
                 </div>
             </div>
         </div>
