--- a/res/html/charts.html
+++ b/res/html/charts.html
@@ -1,7 +1,7 @@
 <div id="gameCharts" class="border2 ui-component chartWindow">
-    <div id="gameChartWindow" class="ui-element border2">
+    <div id="gameChartWindow" class="ui-element border2" style="height: 100%">
         <h5 id="gameChartTitle" class="center toprounder">Charts</h5>
-        <div id="gameChartContent" class="mCSB_container">
+        <div id="gameChartContent" class="mCSB_container" style="height: 100%">
             <div id="gameChartControls" class="col-xs-12 col-md-12 center mt10" style="display: block">
                 <div id="gameChartReset" class="btn btn-primary">Reset</div>
                 <div id="gameChartTimeHour" class="btn btn-primary">Hour</div>
@@ -14,7 +14,7 @@
                     <span>kb</span>
                 </div>
             </div>
-            <div id="gameChartCategoryTabs">
+            <div id="gameChartCategoryTabs" style="height: 100%">
                 <div class="col-xs-12 col-md-12 mt10" style="display: block">
                     <div id="toggleGameChartPlayer" class="btn btn-primary">Player Charts</div>
                     <div id="toggleGameChartStats" class="btn btn-primary">Game Stats</div>
