--- a/res/html/charts.html
+++ b/res/html/charts.html
@@ -28,7 +28,7 @@
                         <div id="toggleChartCraftingXP" class="btn btn-primary">Crafting XP</div>
                         <div id="toggleChartGold" class="btn btn-primary">Gold</div>
                         <div id="toggleChartPlatinum" class="btn btn-primary">Platinum</div>
-                        <div id="toggleChartCrystals" class="btn btn-primary">Crystals</div>
+                        <div id="toggleChartCrystal" class="btn btn-primary">Crystals</div>
                         <div id="toggleChartMaterials" class="btn btn-primary">Material</div>
                         <div id="toggleChartFragments" class="btn btn-primary">Fragments</div>
                         <div id="toggleChartFood" class="btn btn-primary">Food</div>
@@ -41,9 +41,9 @@
                     <div id="chartCraftingXP" class="chartTab"></div>
                     <div id="chartGold" class="chartTab"></div>
                     <div id="chartPlatinum" class="chartTab"></div>
-                    <div id="chartCrystals" class="chartTab"></div>
-                    <div id="chartMaterials" class="chartTab"></div>
-                    <div id="chartFragments" class="chartTab"></div>
+                    <div id="chartCrystal" class="chartTab"></div>
+                    <div id="chartMaterial" class="chartTab"></div>
+                    <div id="chartFragment" class="chartTab"></div>
                     <div id="chartFood" class="chartTab"></div>
                     <div id="chartWood" class="chartTab"></div>
                     <div id="chartIron" class="chartTab"></div>
