base version working

--- a/res/html/charts.html
+++ b/res/html/charts.html
@@ -4,6 +4,8 @@
         <div id="gameChartContent" class="mCSB_container" style="height: 100%">
             <div id="gameChartControls" class="col-xs-12 col-md-12 center mt10" style="display: block">
                 <div id="gameChartReset" class="btn btn-primary">Reset</div>
+                <div id="gameChartRedraw" class="btn btn-primary">Redraw</div>
+                <div id="gameChartTimeMinute" class="btn btn-primary">Minute</div>
                 <div id="gameChartTimeHour" class="btn btn-primary">Hour</div>
                 <div id="gameChartTimeDay" class="btn btn-primary">Day</div>
                 <div id="gameChartTimeWeek" class="btn btn-primary">Week</div>
