restructuring and some cleanup

--- a/res/html/charts.html
+++ b/res/html/charts.html
@@ -5,6 +5,7 @@
             <div id="gameChartControls" class="col-xs-12 col-md-12 center mt10" style="display: block">
                 <div id="gameChartReset" class="btn btn-primary">Reset</div>
                 <div id="gameChartRedraw" class="btn btn-primary">Redraw</div>
+                <div id="gameChartDebugData" class="btn btn-primary">Debug</div>
                 <div id="gameChartTimeMinute" class="btn btn-primary">Minute</div>
                 <div id="gameChartTimeHour" class="btn btn-primary">Hour</div>
                 <div id="gameChartTimeDay" class="btn btn-primary">Day</div>
