--- a/res/html/script-settings.html
+++ b/res/html/script-settings.html
@@ -26,11 +26,7 @@
                     </td>
                     <td>Permanent House Timer</td>
                     <td>
-                        <span>Shows a</span>
-                        <a target="_blank"
-                           href="https://github.com/Alorel/avabur-improved/blob/master/screenshots/permanent-house-timer.png">
-                            permanent construction timer
-                        </a>
+                        <span>Shows a permanent construction timer</span>
                         <span>
                             without needing to build an alarm clock. Vysn said he won't forbid the feature, but it does
                             upset him - let your conscience decide whether the feature should be used.
@@ -48,7 +44,7 @@
                 <tr>
                     <th>Notification</th>
                     <th>Enable sound</th>
-                    <th>Enable floater</th>
+                    <th>Enable notification</th>
                 </tr>
                 </thead>
                 <tbody id="avi-settings">
@@ -97,35 +93,6 @@
                 </tr>
                 </tbody>
             </table>
-        </div>
-        <div data-menu="about">
-            <div class="avi-table avi-margin-auto">
-                <div>
-                    <span>Author:</span>
-                    <a href="javascript:;" class="profileLink">Alorel</a>
-                </div>
-                <div>
-                    <span>Resources:</span>
-                    <div>
-                        <ul class="avi">
-                            <li><a href="https://github.com/Alorel/avabur-improved" target="_blank">Homepage</a></li>
-                            <li>
-                                <a href="https://github.com/Alorel/avabur-improved/issues" target="_blank">
-                                    Bugs and suggestions
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/Alorel/avabur-improved/releases" target="_blank">
-                                    Changelog
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://avabur.boards.net/thread/881" target="_blank">Forum thread</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </div>
