more small fixes for chart save / load

--- a/res/html/charts.html
+++ b/res/html/charts.html
@@ -13,7 +13,7 @@
                 <div id="gameChartStorageSizeWrapper" style="display: inline-block">
                     <span>Storage Size: </span>
                     <span id="gameChartStorageSize">0</span>
-                    <span>kb</span>
+                    <span>bytes</span>
                 </div>
             </div>
             <div id="gameChartCategoryTabs" style="height: 100%">
