--- a/res/html/charts.html
+++ b/res/html/charts.html
@@ -31,8 +31,8 @@
                         <div id="toggleChartGold" class="btn btn-primary">Gold</div>
                         <div id="toggleChartPlatinum" class="btn btn-primary">Platinum</div>
                         <div id="toggleChartCrystal" class="btn btn-primary">Crystals</div>
-                        <div id="toggleChartMaterials" class="btn btn-primary">Material</div>
-                        <div id="toggleChartFragments" class="btn btn-primary">Fragments</div>
+                        <div id="toggleChartMaterial" class="btn btn-primary">Material</div>
+                        <div id="toggleChartFragment" class="btn btn-primary">Fragments</div>
                         <div id="toggleChartFood" class="btn btn-primary">Food</div>
                         <div id="toggleChartWood" class="btn btn-primary">Wood</div>
                         <div id="toggleChartIron" class="btn btn-primary">Iron</div>
