player charts for battle, harvest and crafting income

--- a/res/html/charts.html
+++ b/res/html/charts.html
@@ -25,31 +25,33 @@
 
                 <div id="gameChartPlayerTabs" class="chartCategoryTab">
                     <div class="col-xs-12 col-md-12 mt10" style="display: block">
-                        <div id="toggleChartBattleXP" class="btn btn-primary">Battle XP</div>
-                        <div id="toggleChartHarvestXP" class="btn btn-primary">Harvest XP</div>
-                        <div id="toggleChartCraftingXP" class="btn btn-primary">Crafting XP</div>
-                        <div id="toggleChartGold" class="btn btn-primary">Gold</div>
-                        <div id="toggleChartPlatinum" class="btn btn-primary">Platinum</div>
-                        <div id="toggleChartCrystal" class="btn btn-primary">Crystals</div>
-                        <div id="toggleChartMaterial" class="btn btn-primary">Material</div>
-                        <div id="toggleChartFragment" class="btn btn-primary">Fragments</div>
-                        <div id="toggleChartFood" class="btn btn-primary">Food</div>
-                        <div id="toggleChartWood" class="btn btn-primary">Wood</div>
-                        <div id="toggleChartIron" class="btn btn-primary">Iron</div>
-                        <div id="toggleChartStone" class="btn btn-primary">Stone</div>
+                        <div id="toggleChartPlayerBattleXP" class="btn btn-primary">Battle XP</div>
+                        <div id="toggleChartPlayerHarvestXP" class="btn btn-primary">Harvest XP</div>
+                        <div id="toggleChartPlayerCraftingXP" class="btn btn-primary">Crafting XP</div>
+                        <div id="toggleChartPlayerGold" class="btn btn-primary">Gold</div>
+                        <div id="toggleChartPlayerGoldLooted" class="btn btn-primary">Gold Looted</div>
+                        <div id="toggleChartPlayerPlatinum" class="btn btn-primary">Platinum</div>
+                        <div id="toggleChartPlayerCrystal" class="btn btn-primary">Crystals</div>
+                        <div id="toggleChartPlayerMaterial" class="btn btn-primary">Material</div>
+                        <div id="toggleChartPlayerFragment" class="btn btn-primary">Fragments</div>
+                        <div id="toggleChartPlayerFood" class="btn btn-primary">Food</div>
+                        <div id="toggleChartPlayerWood" class="btn btn-primary">Wood</div>
+                        <div id="toggleChartPlayerIron" class="btn btn-primary">Iron</div>
+                        <div id="toggleChartPlayerStone" class="btn btn-primary">Stone</div>
                     </div>
-                    <div id="chartBattleXP" class="chartTab"></div>
-                    <div id="chartHarvestXP" class="chartTab"></div>
-                    <div id="chartCraftingXP" class="chartTab"></div>
-                    <div id="chartGold" class="chartTab"></div>
-                    <div id="chartPlatinum" class="chartTab"></div>
-                    <div id="chartCrystal" class="chartTab"></div>
-                    <div id="chartMaterial" class="chartTab"></div>
-                    <div id="chartFragment" class="chartTab"></div>
-                    <div id="chartFood" class="chartTab"></div>
-                    <div id="chartWood" class="chartTab"></div>
-                    <div id="chartIron" class="chartTab"></div>
-                    <div id="chartStone" class="chartTab"></div>
+                    <div id="chartPlayerBattleXP" class="chartTab"></div>
+                    <div id="chartPlayerHarvestXP" class="chartTab"></div>
+                    <div id="chartPlayerCraftingXP" class="chartTab"></div>
+                    <div id="chartPlayerGold" class="chartTab"></div>
+                    <div id="chartPlayerGoldLooted" class="chartTab"></div>
+                    <div id="chartPlayerPlatinum" class="chartTab"></div>
+                    <div id="chartPlayerCrystal" class="chartTab"></div>
+                    <div id="chartPlayerMaterial" class="chartTab"></div>
+                    <div id="chartPlayerFragment" class="chartTab"></div>
+                    <div id="chartPlayerFood" class="chartTab"></div>
+                    <div id="chartPlayerWood" class="chartTab"></div>
+                    <div id="chartPlayerIron" class="chartTab"></div>
+                    <div id="chartPlayerStone" class="chartTab"></div>
                 </div>
 
                 <div id="gameChartStatsTabs" class="chartCategoryTab">
