--- a/res/html/debug.html
+++ b/res/html/debug.html
@@ -2,20 +2,22 @@
     <div id="debugWindow" class="ui-element border2" style="height: 100%">
         <h5 id="debugWindowTitle" class="center toprounder">Debug</h5>
         <div id="debugWindowContent" class="mCSB_container" style="height: 100%">
-            <thead>
-            <tr>
-                <th colspan="3">
-                    Request History
-                </th>
-            </tr>
-            <tr>
-                <th>Url</th>
-                <th>Time since Request</th>
-                <th>Data</th>
-            </tr>
-            </thead>
-            <tbody id="debugWindowContentBody">
-            </tbody>
+            <table class="avi" style="margin:auto">
+                <thead>
+                <tr>
+                    <th colspan="3">
+                        Request History
+                    </th>
+                </tr>
+                <tr>
+                    <th>Url</th>
+                    <th>Time since Request</th>
+                    <th>Data</th>
+                </tr>
+                </thead>
+                <tbody id="debugWindowContentBody">
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
