debug hook for sent data

--- a/res/html/debug.html
+++ b/res/html/debug.html
@@ -11,8 +11,9 @@
                 </tr>
                 <tr>
                     <th>Url</th>
-                    <th>Time since Request</th>
-                    <th>Data</th>
+                    <th>Time</th>
+                    <th>Data Sent</th>
+                    <th>Data Received</th>
                 </tr>
                 </thead>
                 <tbody id="debugWindowContentBody">
