--- a/res/html/timers.html
+++ b/res/html/timers.html
@@ -1,4 +1,4 @@
-<div id="timers">
+<div id="timers" style="margin-top: 10px">
     <div class="ui-element border2">
         <h5 class="toprounder center">Timers</h5>
         <div id="timerTable" class="row">
