more menu changes

--- a/res/html/script-menu.html
+++ b/res/html/script-menu.html
@@ -1,6 +1,6 @@
 <div id="roaext" style="margin-top: 10px">
     <div class="ui-element border2">
-        <h5 class="toprounder center active">Timers</h5>
+        <h5 id="roaMenuTitle" class="toprounder center active"></h5>
         <div id="roaMenuContent" class="row">
         </div>
     </div>
