--- a/res/html/script-menu.html
+++ b/res/html/script-menu.html
@@ -1,4 +1,4 @@
-<div id="roaext" style="margin-top: 10px">
+<div id="roaext" style="margin-top: 10px; margin-bottom: 10px">
     <div class="ui-element border2">
         <h5 id="roaMenuTitle" class="toprounder center active"></h5>
         <div id="roaMenuContent" class="row">
