more menu changes

--- a/res/html/script-menu.html
+++ b/res/html/script-menu.html
@@ -1,7 +1,7 @@
-<div id="roaext" style="margin-top: 10px; margin-bottom: 10px">
+<div id="roaext" style="margin-bottom: 10px">
     <div class="ui-element border2">
         <h5 id="roaMenuTitle" class="toprounder center active"></h5>
-        <div id="roaMenuContent" class="row">
-        </div>
+        <ul id="roaMenuContent">
+        </ul>
     </div>
 </div>
