--- a/res/html/debug.html
+++ b/res/html/debug.html
@@ -1,6 +1,7 @@
 <div id="debug" class="border2 ui-component debugWindow">
     <div id="debugWindow" class="ui-element border2" style="height: 100%">
         <h5 id="debugWindowTitle" class="center toprounder">Debug</h5>
+        <span class="closeModal"><a>×</a></span>
         <div id="debugWindowContent" class="mCSB_container" style="height: 100%">
             <table class="avi" style="margin:auto">
                 <thead>
