--- a/res/html/timers.html
+++ b/res/html/timers.html
@@ -1,6 +1,7 @@
 <div id="timers" style="margin-top: 10px">
     <div class="ui-element border2">
         <h5 class="toprounder center">Timers</h5>
+        <span class="closeModal"><a>×</a></span>
         <div id="timerTable" class="row">
         </div>
     </div>
