renaming a few things

--- a/res/html/timerEditor.html
+++ b/res/html/timerEditor.html
@@ -35,7 +35,7 @@
                             <input id="customTimerOptNotify" type="checkbox">Notification</input>
                         </th>
                         <th>
-                            <div id="customTimerCreateButton">Create</div>
+                            <a id="customTimerCreateButton">Create</a>
                         </th>
                     </tr>
                 </table>
