more renames and smaller changes

--- a/res/html/chartWindow.html
+++ b/res/html/chartWindow.html
@@ -1,6 +1,7 @@
 <div id="gameCharts" class="border2 ui-component chartWindow">
     <div id="gameChartWindow" class="ui-element border2" style="height: 100%">
         <h5 id="gameChartTitle" class="center toprounder">Charts</h5>
+        <span class="closeModal"><a id="gameChartWindowClose">×</a></span>
         <div id="gameChartContent" class="mCSB_container" style="height: 100%">
             <div id="gameChartControls" class="col-xs-12 col-md-12 center mt10" style="display: block">
                 <div id="gameChartReset" class="btn btn-primary">Reset</div>
