--- a/res/html/timerEditor.html
+++ b/res/html/timerEditor.html
@@ -1,8 +1,8 @@
-<div id="createTimer" class="border2 ui-component createTimerWindow">
-    <div id="createTimerWindow" class="ui-element border2" style="height: 100%">
-        <h5 id="createTimerTitle" class="center toprounder">Create Timer</h5>
-        <span class="closeModal"><a>×</a></span>
-        <div id="createTimerContent" class="mCSB_container" style="height: 100%">
+<div id="timerEditor" class="border2 ui-component timerEditorWindow">
+    <div id="timerEditorWindow" class="ui-element border2" style="height: 100%">
+        <h5 id="timerEditorTitle" class="center toprounder">Create Timer</h5>
+        <span class="closeModal"><a id="timerEditorWindowClose">×</a></span>
+        <div id="timerEditorContent" class="mCSB_container" style="height: 100%">
             <div id="activeCustomTimers">
                 <thead>
                 <tr>
