--- a/res/html/debugWindow.html
+++ b/res/html/debugWindow.html
@@ -1,7 +1,7 @@
 <div id="debug" class="border2 ui-component debugWindow">
     <div id="debugWindow" class="ui-element border2" style="height: 100%">
         <h5 id="debugWindowTitle" class="center toprounder">Debug</h5>
-        <span class="closeModal"><a>×</a></span>
+        <span class="closeModal"><a id="debugWindowClose">×</a></span>
         <div id="debugWindowContent" class="mCSB_container" style="height: 100%">
             <table class="avi" style="margin:auto">
                 <thead>
