--- a/res/html/noteWindow.html
+++ b/res/html/noteWindow.html
@@ -1,7 +1,7 @@
 <div id="notes" class="border2 ui-component noteWindow">
     <div id="noteWindow" class="ui-element border2" style="height: 100%">
         <h5 id="noteTitle" class="center toprounder">Notes</h5>
-        <span class="closeModal"><a>×</a></span>
+        <span class="closeModal"><a id="noteWindowClose">×</a></span>
         <div id="noteContent" class="mCSB_container" style="height: 100%">
             <div id="noteEditor"></div>
         </div>
