more timer changes

--- a/res/html/timerMenu.html
+++ b/res/html/timerMenu.html
@@ -1,8 +1,8 @@
-<div id="timers" style="margin-top: 10px">
+<div id="timerMenu" style="margin-top: 10px">
     <div class="ui-element border2">
-        <h5 class="toprounder center">Timers</h5>
+        <h5 class="toprounder center"><a id="timerEditorOpen" href="javascript:;">Timers</a></h5>
         <span class="closeModal"><a>×</a></span>
-        <div id="timerTable" class="row">
+        <div id="timerMenuContents" class="row">
         </div>
     </div>
 </div>
