--- a/res/html/timerEditor.html
+++ b/res/html/timerEditor.html
@@ -4,20 +4,22 @@
         <span class="closeModal"><a id="timerEditorWindowClose">×</a></span>
         <div id="timerEditorContent" class="mCSB_container" style="height: 100%">
             <div id="activeCustomTimers">
-                <thead>
-                <tr>
-                    <th colspan="3">
-                        Active Timers
-                    </th>
-                </tr>
-                <tr>
-                    <th>Name</th>
-                    <th>Time</th>
-                    <th>Options</th>
-                </tr>
-                </thead>
-                <tbody id="activeCustomTimerTableContent">
-                </tbody>
+                <table class="avi" style="margin:auto">
+                    <thead>
+                    <tr>
+                        <th colspan="3">
+                            Active Timers
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>Name</th>
+                        <th>Time</th>
+                        <th>Options</th>
+                    </tr>
+                    </thead>
+                    <tbody id="activeCustomTimerTableContent">
+                    </tbody>
+                </table>
             </div>
             <div id="createNewCustomTimer">
                 <table class="avi" style="margin:auto">
@@ -39,6 +41,8 @@
                         </th>
                     </tr>
                 </table>
+            </div>
+            <div id="createTimerFeedback">
             </div>
         </div>
     </div>
