--- a/res/html/timerMenu.html
+++ b/res/html/timerMenu.html
@@ -1,6 +1,6 @@
 <div id="timerMenu" style="margin-top: 10px">
     <div class="ui-element border2">
-        <h5 class="toprounder center"><a id="timerEditorOpen" href="javascript:;">Timers</a></h5>
+        <h5 class="toprounder center"><a id="timerEditorOpen" href="javascript:;" style="text-decoration: none!important;">Timers</a></h5>
         <div id="timerMenuContents" class="row">
         </div>
     </div>
