mroe css changes

--- a/res/html/timerEditor.html
+++ b/res/html/timerEditor.html
@@ -21,7 +21,7 @@
                     </tbody>
                 </table>
             </div>
-            <div id="createNewCustomTimer">
+            <div id="createNewCustomTimer" style="margin-top: 10px">
                 <table class="avi" style="margin:auto">
                     <tr>
                         <th>
@@ -42,7 +42,7 @@
                     </tr>
                 </table>
             </div>
-            <div id="createTimerFeedback">
+            <div id="createTimerFeedback" class="createTimerFeedback">
             </div>
         </div>
     </div>
