more css changes / fixes

--- a/res/html/timerEditor.html
+++ b/res/html/timerEditor.html
@@ -25,16 +25,16 @@
                 <table class="avi" style="margin:auto">
                     <tr>
                         <th>
-                            <input id="customTimerOptName"> Name</input>
+                            <input id="customTimerOptName" class="createTimerInput"> Name</input>
                         </th>
                         <th>
-                            <input id="customTimerOptHour" class="customTimerInput" maxlength="2"> H</input>
-                            <input id="customTimerOptMinute" class="customTimerInput" maxlength="2"> M</input>
-                            <input id="customTimerOptSecond" class="customTimerInput" maxlength="2"> S</input>
+                            <input id="customTimerOptHour" class="createTimerInputTime" maxlength="2"> H</input>
+                            <input id="customTimerOptMinute" class="createTimerInputTime" maxlength="2"> M</input>
+                            <input id="customTimerOptSecond" class="createTimerInputTime" maxlength="2"> S</input>
                         </th>
                         <th>
-                            <input id="customTimerOptSound" type="checkbox">Sound</input>
-                            <input id="customTimerOptNotify" type="checkbox">Notification</input>
+                            <input id="customTimerOptSound" type="checkbox" class="createTimerCheckbox">Sound</input>
+                            <input id="customTimerOptNotify" type="checkbox" class="createTimerCheckbox">Notification</input>
                         </th>
                         <th>
                             <a id="customTimerCreateButton">Create</a>
